--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #faebd7;
+}
+
 h1,
 h2 {
   text-align: center;
@@ -10,6 +14,12 @@ h1 {
 
 h3 {
   text-align: left;
+}
+
+main {
+  background-color: #f0f8ff;
+  border-radius: 20px;
+  padding: 2rem 4rem;
 }
 
 .container {
@@ -29,7 +39,7 @@ h3 {
 }
 
 .icon {
-  font-size: 4rem;
+  font-size: 3rem;
   padding: 1rem;
 }
 
@@ -40,4 +50,8 @@ h3 {
 
 .contact-icon-container i {
   padding-right: 1rem;
+}
+
+.left {
+  margin-top: 2rem;
 }
