--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+:root {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
   background-color: #faebd7;
 }
@@ -18,6 +24,7 @@ h3 {
 
 main {
   max-width: 1000px;
+  width: 80%; 
 }
 
 .container {
@@ -61,11 +68,8 @@ main {
 }
 
 .form-container {
-  padding: 20px;
-  margin-top: 20px;
+  padding: 2rem 4rem;
   width: 100%;
-
-  display: block;
   margin: 0 auto;
   background-color: #f0f8ff;
   border-radius: 20px;
@@ -87,4 +91,15 @@ textarea {
   box-sizing: border-box;
   border-radius: 5px;
   border: 1px solid rgba(0, 0, 0, 0.5);
+  resize: none;
+}
+
+button {
+    background-color: #faebd7;
+    border: none;
+    width: 100%;
+    border-radius: 5px;
+    padding: 16px 32px;
+    margin  4px 2px
+    cursor: pointer;
 }
