--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 :root {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -24,17 +24,18 @@ h3 {
 
 main {
   max-width: 1000px;
-  width: 80%; 
+  width: 80%;
 }
 
 span {
-    padding-left: 20px;
+  padding-left: 20px;
 }
 .container {
-  display: block;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   gap: 2rem;
 }
 
@@ -73,7 +74,6 @@ span {
 .form-container {
   padding: 2rem 4rem;
   width: 100%;
-  margin: 0 auto;
   background-color: #f0f8ff;
   border-radius: 20px;
 }
@@ -98,11 +98,38 @@ textarea {
 }
 
 button {
-    background-color: #faebd7;
-    border: none;
+  background-color: #faebd7;
+  border: none;
+  width: 100%;
+  border-radius: 1rem;
+  padding: 16px 32px;
+  margin: 4px 2px;
+  cursor: pointer;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+@media screen and (max-width: 600px) {
+  .section-container {
+    grid-template-columns: 1fr;
+    padding: 1rem 2rem;
+  }
+
+  main {
+    max-width: 450px;
+  }
+
+  span {
+    padding-left: 5px;
+  }
+
+  .right {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .form-container {
+    padding: 1rem 2rem;
     width: 100%;
-    border-radius: 5px;
-    padding: 16px 32px;
-    margin  4px 2px
-    cursor: pointer;
+  }
 }
